--- a/inter.css
+++ b/inter.css
@@ -33,7 +33,7 @@
 
 .PerInfo article{
     width: calc(100% - 200px);
-    height: calc(100vh - 300px);
+    height: calc(100vh - 360px);
 }
 
 .PerInfo ul{
@@ -45,6 +45,11 @@
 .titulo-lol{
     color: #2b2b2b;
 }
+ 
+/*.fotodeperfil{
+    width:100%;
+    height:50%;
+}*/
 
 /*h1{
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
